manifests/apps/template-web/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: template-web
  namespace: template-web
  labels:
    app.kubernetes.io/name: template-web
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/name: "template-web"
    gethomepage.dev/icon: "mdi-application"
    gethomepage.dev/href: "https://template-web.ukkiee.dev"
    gethomepage.dev/description: "template-web"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=template-web"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`template-web.ukkiee.dev`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik-system
        - name: gzip
          namespace: traefik-system
      services:
        - name: template-web
          port: 3000
